--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,9 +16,14 @@ add_executable(lem-in
         srcs/ft_parse_links.c
         srcs/ft_parse_noa.c
         srcs/ft_parse_rooms.c
-        srcs/ft_parse_start.c
         srcs/lem_in.c
-        srcs/main.c srcs/ft_parse_start_room.c srcs/ft_find_links.c srcs/ft_find_road.c)
+        srcs/main.c
+        srcs/ft_parse_start_room.c
+        srcs/ft_find_links.c
+        srcs/ft_find_road.c
+        srcs/ft_find_command.c
+        srcs/ft_free_arr.c
+        )
 
 add_library(libft STATIC IMPORTED) # Создание статической библиотеки с именем libft
 set_property(TARGET libft PROPERTY
